@@ -496,30 +496,25 @@ void Note::draw(QPainter& p, ScoreView* v) const
                   double imag = 1.0 / mag;
                   double currSpatium = spatium();
 
-                  QFont f(tab->fretFontName());
-                  int size = lrint(tab->fretFontSize() * DPI / PPI);
-                  f.setPixelSize(size);
+//                  QFont f(tab->fretFontName());
+//                  int size = lrint(tab->fretFontSize() * DPI / PPI);
+//                  f.setPixelSize(size);
                   p.scale(mag, mag);
-                  p.setFont(f);
+//                  p.setFont(f);
+                  p.setFont(tab->fretFont());
 
-                  // when using letters, "+(_fret > 7)" skips 'j'
+                  // when using letters, "+(_fret > 8)" skips 'j'
                   QString s = _ghost ? "X" :
-                          ( tab->useNumbers() ? QString::number(_fret) : QString('a' + _fret + (_fret > 7)) );
+                          ( tab->useNumbers() ? QString::number(_fret) : QString('a' + _fret + (_fret > 8)) );
                   double d  = currSpatium * .2;
                   QRectF bb = bbox().adjusted(-d, 0.0, d, 0.0);
-                  // QRectF bb = QRectF(bbox().x()-d, tab->charBoxY(currSpatium), bbox().width()+d*2.0, tab->charBoxY(currSpatium));
                   if(!tab->linesThrough() || !tab->slashStyle()) {
                         if (v)
-                                v->drawBackground(p, bb);
+                              v->drawBackground(p, bb);
                         else
-                                p.eraseRect(bb);
+                              p.eraseRect(bb);
                         }
-#if(0)
-                  // p.drawText(0.0, 0.0, s);
-                  p.drawText(0.0, bbox().height() * .5, s);
-#else
-                  p.drawText(_bbox.x(), tab->fretFontYOffset(currSpatium) * currSpatium * mag, s);
-#endif
+                  p.drawText(_bbox.x(), tab->fretFontYOffset() * mag, s);
                   p.scale(imag, imag);
                   }
             else {                        // if not tablature
@@ -1222,26 +1217,16 @@ void Note::layout()
       bool useTablature = staff() && staff()->useTablature();
       if (useTablature) {
             StaffTypeTablature* tab = (StaffTypeTablature*)staff()->staffType();
-            double mag = magS();
-            double currSpatium = spatium();
+            double mags = magS();
             QFont f(tab->fretFontName());
             int size = lrint(tab->fretFontSize() * DPI / PPI);
             f.setPixelSize(size);
             QFontMetricsF fm(f);
-            // when using letters, "+(_fret > 7)" skips 'j'
+            // when using letters, "+(_fret > 8)" skips 'j'
             QString s = _ghost ? "X" :
-                        ( tab->useNumbers() ? QString::number(_fret) : QString('a' + _fret + (_fret > 7)) );
-#if(0)
-            QRectF bb(fm.tightBoundingRect(s));
-            bb = bb.translated(0.0, bb.height() * .5);
-            _bbox = QRectF(bb.x() * mag, bb.y() * mag, bb.width() * mag, bb.height() * mag);
-#else
-            // QRectF bb(fm.boundingRect(s));
-            double w = fm.width(s) * mag;
-            // _bbox = QRectF(-w/2.0, bb.y() * mag, w, bb.height()*mag);
-            _bbox = QRectF(0.0, tab->charBoxY(currSpatium)*currSpatium*mag,
-                        w, tab->charBoxH(currSpatium)*currSpatium*mag);
-#endif
+                        ( tab->useNumbers() ? QString::number(_fret) : QString('a' + _fret + (_fret > 8)) );
+            double w = fm.width(s) * mags;
+            _bbox = QRectF(0.0, tab->charBoxY() * mags, w, tab->charBoxH() * mags);
             }
       else
             _bbox = symbols[score()->symIdx()][noteHead()].bbox(magS());
@@ -1255,8 +1240,6 @@ void Note::layout()
             }
       if (_bend)
             _bend->layout();
-//      if(!useTablature)
-//      {
       int dots = chord()->dots();
       for (int i = 0; i < 3; ++i) {
             if (i < dots) {
@@ -1264,8 +1247,6 @@ void Note::layout()
                         _dots[i] = new NoteDot(score());
                         _dots[i]->setIdx(i);
                         _dots[i]->setParent(this);
-//                        if(useTablature)
-//                              _dots[i]->setVisible(false);
                         _dots[i]->setTrack(track());  // needed to know the staff it belongs to (and detect tablature)
                         }
                   _dots[i]->layout();
@@ -1275,7 +1256,8 @@ void Note::layout()
                   _dots[i] = 0;
                   }
             }
-      if (dots) {
+      // with tablature, dots are hidden: do not spend time positioning them!
+      if (dots && !useTablature) {
             double _spatium = spatium();
             double d  = point(score()->styleS(ST_dotNoteDistance));
             double dd = point(score()->styleS(ST_dotDotDistance));
@@ -1297,7 +1279,6 @@ void Note::layout()
             for (int i = 0; i < dots; ++i)
                   _dots[i]->setPos(x + d + dd * i, y);
             }
-//      }
       }
 
 //---------------------------------------------------------
